force-app/main/default/objects/Payment__c/fields/Authorize_net_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Authorize_net_Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Authorize.net Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>