force-app/main/default/objects/Payment__c/fields/Check_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Routing_Number__c</fullName>
    <label>Check Routing Number</label>
    <length>128</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>