force-app/main/default/objects/Payment__c/fields/Credit_Card_Security_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Security_Card__c</fullName>
    <label>Credit Card Security Card</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>