force-app/main/default/objects/Payment__c/recordTypes/Check.recordType-meta.xml
<RecordType>
    <fullName>Check</fullName>
    <active>true</active>
    <label>Check</label>
</RecordType>